fixed top spacing

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
 }
 
 #logo {
-	padding: 5px 5px 0 5px;
+	padding: 0 5px;
 	float: left;
 	color: #F2F2F2;
 	font-size: 40px;
